--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "server": "nodemon Backend/app.js",
-    "client": "npm run dev -- prefix Air_write_system"
+    "start": "nodemon app.js"
   },
   "author": "Bipesh khadka",
   "license": "ISC",
@@ -23,8 +20,5 @@
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11"
-  },
-  "devDependencies": {
-    "concurrently": "^9.2.1"
   }
 }
